# medilink-backend

./: .env  .gitignore  Cargo.toml  README.md
config/: app.toml
migrations/: 20260222190017_init.sql  20260228092420_add_doctors.sql  20260228094115_add_appointments.sql  20260228094943_add_unique_doctor_timeslot.sql
src/: lib.rs  main.rs
src/auth/: clinic_auth.rs  mod.rs  patient_auth.rs
src/config/: app.rs  mod.rs
src/db/: appointments.rs  clinics.rs  doctors.rs  mod.rs  patients.rs
src/router/: router.rs
src/router/routes/: add_doctor.rs  book_appointment.rs  cancel_appointment.rs  clinic_login.rs  clinic_signup.rs  get_appointments.rs  list_doctors.rs  mod.rs  patient_login.rs  patient_signup.rs
