[package]
name = "youtrack_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3" }
rand_core = { version = "0.6", features = ["getrandom"] }
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive"] }
config = "0.15.19"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"]}
tokio = { version = "1.49.0", features = ["full"]}
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
regex = "1.12.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
async-trait = "0.1.89"
tower-http = { version = "0.6", features = ["cors"] }
env_logger = "0.10"